spacing & alignment fixes on mobile views

--- a/docs/_sass/_sidebar.scss
+++ b/docs/_sass/_sidebar.scss
@@ -178,6 +178,7 @@
 	img {
 		margin-top: 8px;
 		margin-bottom: 0px;
+		margin-right: 20px;
 		width: 120px;
 	}
 
